CanvasWorker now works with OffscreenCanvas and draws pixels itself. Fixed some styles

--- a/src/ui/components/editor/tracks/tracks.scss
+++ b/src/ui/components/editor/tracks/tracks.scss
@@ -20,6 +20,11 @@
   &._desc {
     color: #888;
     cursor: auto;
+
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    white-space: pre;
   }
 
   &._disabled {
